:sparkles: Feat: 회원가입 취소 기능 추가

--- a/member/register.html
+++ b/member/register.html
@@ -155,7 +155,7 @@
                 </table>
                 <div>
                     <input type="button" value="회원 가입" name="mem_B1" onClick="sendIt()">
-                    <input type="button" value="가입 취소">
+                    <input type="button" value="가입 취소" onClick="history.back()">
                 </div>
             </form>
         </div>
